Removing layout/box order section, this is just plain Bootstrap magic, no need to document it here. Also, fixed jumpy box on hover.

--- a/less/stb-boxes.less
+++ b/less/stb-boxes.less
@@ -1,5 +1,5 @@
 .stb-box {
-  padding: 12px 24px 24px 24px;
+  padding: 24px;
   margin-bottom: 20px;
   border: 1px solid transparent;  
   
@@ -82,7 +82,6 @@
   }
 
   &.mini:hover {
-    padding: 24px;
     @media screen and (max-width: 768px) {
       padding: 12px;
     }
@@ -99,7 +98,6 @@
   }
 
   &.big:hover {
-    padding: 24px;
     @media screen and (max-width: 768px) {
       padding: 12px;
     }
